fix(questions): limit changes to wait visibility
